Fix layout issues in dialogs section

--- a/style.css
+++ b/style.css
@@ -22,14 +22,13 @@ body {
   font-family: "Inter", sans-serif;
 }
 main {
-  width: min(310px, 100%);
+  width: min(312px, 100%);
   display: flex;
   justify-content: start;
   align-items: center;
   flex-direction: row;
   padding-top: 10px;
   overflow-x: hidden;
-  gap: 4px;
   border: 1px solid var(--neon-yellow);
 }
 
@@ -140,10 +139,12 @@ main {
 .versus-dialog {
   min-height: 100%;
   min-width: 100%;
-  background-color: transparent;
   position: relative;
   overflow-x: hidden;
   margin: 0.6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   /* MODAL TOGGLING */
   & input[type="checkbox"] {
@@ -153,37 +154,46 @@ main {
     z-index: 3;
   }
   input[type="checkbox"]:checked ~ div {
-    --off-screen-translation: -100%;
+    --off-screen-translation: calc(-110%);
   }
 
   & .vs-human-and-ai {
-    height: 50%;
+    height: 60%;
     width: 100%;
     margin-top: 40px;
     overflow-x: hidden;
     display: flex;
+    gap: 18px;
 
-    & .vs-human {
-      min-width: 100%;
-      min-height: 100%;
+    & div {
+      display: flex;
+      align-items: center;
+      width: 100%;
+    margin-left: 14px;
+
+    }
+
+    & div form {
+      margin-top: 1.2rem;
+      width: 100%;
+      height: 90%;
       transition: transform 0.3s ease;
       transform: translateX(var(--off-screen-translation));
       display: flex;
       flex-direction: column;
       justify-content: start;
       align-items: center;
+      padding: 0.8rem;
+      border: var(--border);
+      border-radius: 12px;
+      box-shadow: var(--mid-box-shadow);
       background-color: var(--cyan-blue);
-      & form {
-        width: 300px;
-      }
+    }
+
+    & .vs-human {
     }
 
     & .vs-ai {
-      min-width: 100%;
-      min-height: 100%;
-      background-color: rgb(105, 255, 130);
-      transition: transform 0.3s ease;
-      transform: translateX(var(--off-screen-translation));
     }
   }
 }
